Add Oscar awards data and component to show on movie-dialog. Fix landing page to use Letterboxd reviews again. Fix movie-poll-item removal for poll-item-owners.

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -97,8 +97,7 @@
     them with you friends.<br />Make choosing easy with random draw!<br /><br />
     Yay! 👏
   </p> -->
-  <!-- TODO: Letterboxed api is currently not open for use -->
-  <!-- <latest-reviews></latest-reviews> -->
+  <latest-reviews></latest-reviews>
   <div class="now-playing-container">
     <h2>🎬 Now playing in theaters</h2>
     <div class="now-playing-row">
