--- a/src/app/latest-reviews/latest-review-item/latest-review-item.component.html
+++ b/src/app/latest-reviews/latest-review-item/latest-review-item.component.html
@@ -1,3 +1,4 @@
+@let logEntry = logEntry$ | async;
 @if (logEntry) {
 <div class="log-entry-container">
   <div class="user-frame">
@@ -42,7 +43,7 @@
         @if (logEntry.rating) {
             <ng-container
             [ngTemplateOutlet]="ratingTemplate"
-            [ngTemplateOutletContext]="{ rating: logEntry.rating, max: 5 }"
+            [ngTemplateOutletContext]="{ stars: logEntry.stars}"
           ></ng-container>
         }
       </div>
@@ -65,6 +66,8 @@
   </div>
 </div>
 }
+
+@let latestView = latestView$ | async;
 @if (latestView) {
 <div class="view-item-container">
   <div class="user-frame">
@@ -114,7 +117,7 @@
       <div class="rating">
         <ng-container
           [ngTemplateOutlet]="ratingTemplate"
-          [ngTemplateOutletContext]="{ rating: latestView.rating, max: 5 }"
+          [ngTemplateOutletContext]="{ stars: latestView.stars }"
         ></ng-container>
         @if (latestView.like) {
         <mat-icon class="like" matTooltip="Liked">favorite</mat-icon>
@@ -127,21 +130,19 @@
 </div>
 }
 
-<ng-template let-rating="rating" let-max="max" #ratingTemplate>
+<ng-template let-stars="stars" #ratingTemplate>
   <div class="star-rating">
-    <!-- Full stars -->
-    @for (i of Array.from({ length: Math.floor(rating) }); track i) {
-      <mat-icon class="rating-star">star</mat-icon>
-    }
-
-    <!-- Half star -->
-    @if (rating % 1 !== 0) {
-      <mat-icon class="rating-star">star_half</mat-icon>
-    }
-
-    <!-- Empty stars -->
-    @for (i of Array.from({ length: max - Math.ceil(rating) }); track i) {
-      <mat-icon class="empty-star">star_outline</mat-icon>
+    
+    @for (star of stars; track star.id) {
+      @if (star.type === 'full') {
+        <mat-icon class="rating-star">star</mat-icon>
+      }
+      @if (star.type === 'half') {
+        <mat-icon class="rating-star">star_half</mat-icon>
+      }
+      @if (star.type === 'empty') {
+        <mat-icon class="empty-star">star_outline</mat-icon>
+      }
     }
   </div>
 </ng-template>
