--- a/src/app/movie-poll-item/movie-awards/movie-awards.component.scss
+++ b/src/app/movie-poll-item/movie-awards/movie-awards.component.scss
@@ -2,8 +2,8 @@
     position: relative;
     margin: 10px 0;
     font-size: 0.8em;
-    border-top: 2px solid #b546f8;
-    border-bottom: 2px solid #b546f8;
+    border-top: 2px solid;
+    border-bottom: 2px solid;
     padding: 4px 8px;
     border-radius: 15px;
 
@@ -90,7 +90,7 @@
 }
 
 .movie-awards-container.small {
-    border: 2px solid #b546f8;
+    border: 2px solid;
     border-radius: 15px;
 
     mat-icon {
