--- a/src/app/watch-list/watch-list.component.html
+++ b/src/app/watch-list/watch-list.component.html
@@ -1,6 +1,6 @@
 @if ({ watchlist: watchlist$ | async }; as status) {
   <mat-card color="dark-primary">
-    <h1 (click)="loadingVar = !loadingVar">Watchlist</h1>
+    <h1>Watchlist</h1>
     <div class="watchlist-container">
       <div class="flex buttons">
         <button-gradient buttonIcon="add_circle_outline" buttonText="Add new item" (buttonClicked)="openAdd(status?.watchlist || [])"></button-gradient>
