Improve backdrop-theme icon style. Fix issue with already loaded backdrop when changing theme.

--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -809,3 +809,7 @@ mat-card.watched.selected {
     --mat-icon-button-icon-color: #e7e7e7;
   }
 }
+
+.option-card:not(.use-backdrop-theme) {
+  background-image: unset !important;
+}
